Adding bkg images

--- a/jumbotron.css
+++ b/jumbotron.css
@@ -6,7 +6,8 @@ body {
 .jumbotron {
   padding-bottom: 20px;
 /*  background: url("./bkg/blue-bg.jpg") no-repeat fixed center ;*/
-  background: url("./bkg/warp.jpg") no-repeat fixed center ;
+/*  background: url("./bkg/cep.jpg") no-repeat fixed center ; */
+  background: url("./bkg/cep.jpg") center ;
 /*  background-size: 1800px 500px; */
 background-origin: content-box;
     padding:35px;
@@ -14,6 +15,9 @@ background-origin: content-box;
 /*  transition: opacity 0.3s; */
 
   /* background-size: cover; */
+/*   color:#FFFFFF */
+/*   font-weight: bold; */
+    
 }
 
 
